<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Midterm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleView">Travel Cost Calculation</string>
    <string name="distanceView">Distance(Miles)</string>
    <string name="mpglowerView">10</string>
    <string name="mpghigherView">50</string>
    <string name="gasPriceView">Gas Price</string>
    <string name="gasPricelowerView">$1.00</string>
    <string name="gasPricehigherView">$4..00</string>
    <string name="mpgView">MPG</string>
    <string name="mpgTextView">MPG</string>

</resources>
