<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.midterm.MainActivity" >

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/titleView"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:columnCount="2" >

        <TextView
            android:id="@+id/distanceView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/distanceView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/distanceEdit"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:digits="0123456789"
            android:inputType="number" />

        <SeekBar
            android:id="@+id/mpgSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:max="50"
            android:progress="25" />

        <TextView
            android:id="@+id/mpglowerView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/mpglowerView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/gasPriceView"
            android:layout_gravity="left"
            android:text="Gas Price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <SeekBar
            android:id="@+id/gasPriceSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_row="3"
            android:max="4"
            android:progress="2" />

        <TextView
            android:id="@+id/costView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="7"
            android:text="Cost"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/costAmountView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="7"
            android:background="@android:color/holo_blue_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mpgView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="MPG"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mpghigherView"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="2"
            android:text="@string/mpghigherView"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/gasPricehigherView"
            android:layout_column="1"
            android:layout_gravity="right|top"
            android:layout_row="4"
            android:text="@string/gasPricehigherView" />

        <TextView
            android:id="@+id/gasPricelowerView"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="4"
            android:text="$1.00" />

        <TextView
            android:id="@+id/distanceAmountView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="0"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

    </GridLayout>

    <ImageView
        android:id="@+id/carImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:src="@drawable/ford_tempo_1" />

</RelativeLayout>